kubes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-web
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-api
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/trips
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/docs/trips
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/json
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/docs/poi
      - backend:
          serviceName: poi
          servicePort: 80
        path: /swagger/docs/poi
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/user-java
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/docs/user-java
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/documentation/user-java
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/swagger-resources
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/api-docs
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/metrics
      - backend:
          serviceName: userprofile-service
          servicePort: 80
        path: /api/user
      - backend:
          serviceName: userprofile-service
          servicePort: 80
        path: /api/docs/user
